--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,3 +1,4 @@
+<p>Second Page</p>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
